--- a/userinfo.html
+++ b/userinfo.html
@@ -80,7 +80,7 @@
                     <div class="weui-cell__bd">
                         <p>性别</p>
                     </div>
-                    <div class="weui-cell__ft">男</div>
+                    <div class="weui-cell__ft">女</div>
                 </div>
                 <div class="weui-cell">
                     <div class="weui-cell__bd">
@@ -162,7 +162,7 @@
                     <div class="weui-cell__bd">
                         <p>学号</p>
                     </div>
-                    <div class="weui-cell__ft">1202120246</div>
+                    <div class="weui-cell__ft">2021262189</div>
                 </div>
                 <div class="weui-cell">
                     <div class="weui-cell__bd">
@@ -228,7 +228,7 @@
                     <div class="weui-cell__bd">
                         <p>学号</p>
                     </div>
-                    <div class="weui-cell__ft">2021202146</div>
+                    <div class="weui-cell__ft">2021262189</div>
                 </div>
                 <div class="weui-cell">
                     <div class="weui-cell__bd">
